--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
+    "@nuxtjs/google-analytics": "^2.2.3",
     "@nuxtjs/style-resources": "^1.0.0",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2"
