--- a/package.json
+++ b/package.json
@@ -1,22 +1,15 @@
 {
-  "name": "resume",
-  "version": "1.0.0",
-  "description": "Kevin Falencik - resume",
-  "author": "kfalencik",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
     "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate"
-  },
-  "dependencies": {
-    "nuxt": "^2.0.0"
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxtjs/google-analytics": "^2.2.3",
-    "@nuxtjs/style-resources": "^1.0.0",
-    "node-sass": "^4.13.1",
-    "sass-loader": "^8.0.2"
+    "@nuxtjs/google-analytics": "^2.4.0",
+    "nuxt": "^3.2.3",
+    "sass": "^1.58.3"
   }
 }
